--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -18,7 +18,18 @@
     "strict": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
-    "noFallthroughCasesInSwitch": true
+    "noFallthroughCasesInSwitch": true,
+
+    "baseUrl": "./src",
+    "paths": {
+      "api/*": ["./api/*"],
+      "ui/*": ["./ui/*"],
+      "interfaces/*": ["./interfaces/*"],
+      "store/*": ["./store/*"],
+      "pages/*": ["./pages/*"],
+      "helper/*": ["./helper/*"]
+
+    },
   },
   "include": ["src"],
   "references": [{ "path": "./tsconfig.node.json" }]
